add body class about

--- a/templates/about.html
+++ b/templates/about.html
@@ -3,6 +3,8 @@
 {% block title %} ABOUT {%endblock%}
 
 {% block body%}
+
+<body class="about">
 <div id="upcoming-fluid-container" class="container-fluid p-3 my-3 text-white">
 
 <h1 class="text-center mb-5"> ABOUT </h1><br>
@@ -51,5 +53,5 @@
 
 
 </div>
-
+</body>
 {% endblock%}
