replace dark background with black and opacity

--- a/templates/base.html
+++ b/templates/base.html
@@ -50,7 +50,7 @@
 
     {%block nav%}
     <!-- Navigation Bar -->
-    <nav class="navbar navbar-expand-md bg-dark navbar-dark sticky-top">
+    <nav id="nav" class="navbar navbar-expand-md navbar-dark sticky-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="/upcoming">Launch Command</a>
             <img alt="brand" src="/static/img/rocket.png">
@@ -103,44 +103,13 @@
 
 
     {% block after_body %}
-<!-- 
-    <div class="footer-container">
-        <div class="content"></div>
-        <footer class="row">
-            <p> &copy;LAUNCH COMMAND</p>
-            <p>Made with <span>❤</span> by <a href="https://www.instagram.com/rzkytmgr/">@rzkytmgr</a>.</p>
-          <div class="sozial col-xs-12 col-sm-6 col-sm-push-6">
-            <ul class="row">
-              <li class="col-xs-6 col-sm-2">
-                <a href="#">
-                  <img class="logo" src="https://cdn2.iconfinder.com/data/icons/black-white-social-media/32/online_social_media_facebook-128.png">
-                </a>
-              </li>
-              <li class="col-xs-6 col-sm-2">
-                <a href="#">
-                  <img class="logo" src="https://cdn2.iconfinder.com/data/icons/black-white-social-media/32/twitter_online_social_media-128.png">
-                </a>
-              </li>
-              <li class="col-xs-6 col-sm-2">
-                <a href="#">
-                  <img class="logo" src="https://cdn2.iconfinder.com/data/icons/black-white-social-media/32/instagram_online_social_media_photo-128.png">
-                </a>
-              </li>
-   
-            </ul>
-          </div>Ende Sozial media
-          
-          <div class="copyright col-xs-12 col-sm-3 col-sm-pull-6">
-            <p> &copy;LAUNCH COMMAND</p>
-            <p>Made with <span>❤</span> by <a href="https://www.instagram.com/rzkytmgr/">@rzkytmgr</a>.</p>
-          </div>Ende Copyright
-
-        </footer>
-      </div> -->
 
       <div class="container" id="footer">
         <div>
-          <p>Made with <span>❤</span> by <a href="https://www.linkedin.com/in/enid-svymbersky/">@Enid</a>.</p>
+          <p>Made with <span>❤</span> by Enid</p>
+          <a class="github" href="https://github.com/Enid-Sky">Github | </a></li>
+          <a class="twitter" href="https://twitter.com/codingsprinkles">Twitter | </a></li>
+          <a class="twitter" href="https://www.linkedin.com/in/enid-svymbersky/">Linkedin</a>
         </div>
       </div>
     {% endblock %}
